# port

./: .gitignore  Cargo.toml  Makefile  package-lock.json  package.json  plan.md  server.js  tailwind.config.cjs
public/: index.html  output.css
public/pkg/: package.json  port.d.ts  port.js  port_bg.wasm  port_bg.wasm.d.ts
src/: animation.rs  game.rs  html_bind.rs  lib.rs
src/game/: coord.txt  entities.rs  entity.rs  entity_animation.rs  game_api.rs  game_components.rs  game_core.rs  game_port.rs  main_loop.rs  setup.rs  systems.rs
src/game/entities/: collision_box.rs  player.rs  track.rs
src/game/game_components/: box_collider.rs  cbs.rs  collision_markers.rs  controller.rs  globals.rs  motion.rs  player_state.rs  state_cbs.rs  transform.rs
src/game/game_core/: components.rs  rect.rs  rgb.rs  systems.rs  utils.rs  vec2.rs
src/game/game_core/components/: cbs.rs  loose_track.rs  motion.rs  opacity.rs  parent.rs  rect.rs  rectangle.rs  render.rs  rgb.rs  surface.rs  transform.rs  ui.rs  vec2.rs  width.rs
src/game/game_core/systems/: camera.rs  loose_track.rs  motion.rs  render.rs
src/game/game_core/utils/: animation.rs  checkpoint.rs  join_rect.rs  linear_progress.rs  pip.rs  resolve_parent_transform.rs  sequence.rs
src/game/game_port/: components.rs  entities.rs  systems.rs
src/game/game_port/components/: collision.rs  controller.rs  fade_animation.rs  globals.rs  movement.rs  rotation.rs  squish.rs  squish_movt.rs  triangle.rs
src/game/systems/: collision.rs  entity_state.rs  game_control.rs  motion.rs  render.rs
(+17 files in other folders)
