[package]
name = "port"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
hecs = "0.7.7"



[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
  "Window",
  "HtmlCanvasElement",
  "Document",
  "CanvasRenderingContext2d",
  'CssStyleDeclaration',
  'WheelEvent',
  'MouseEvent',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'PointerEvent',
  'KeyboardEvent'
]


